--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,7 +26,7 @@
             <p class="lead">Use this app to find like-minded people</p>
             <hr class="my-4">
             <p>Click here to take our survey</p>
-            <a class="btn btn-primary btn-lg" href="../public/survey.html" role="button">Take Survey</a>
+            <a class="btn btn-primary btn-lg" href="/add" role="button">Take Survey</a>
         </div>
     </div>
 </body>
